Started working on a contact form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <app-jumbotron></app-jumbotron>
 <app-greeting></app-greeting>
 <app-projects></app-projects>
+<app-contact-form></app-contact-form>
 <app-footer></app-footer>
