Started working on api call to send contact message.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,7 @@
 <app-jumbotron></app-jumbotron>
 <app-greeting></app-greeting>
 <app-projects></app-projects>
+<app-resume></app-resume>
+<app-skills></app-skills>
 <app-contact-form></app-contact-form>
 <app-footer></app-footer>
