--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -20,8 +20,8 @@
             <a href="https://github.com/tmjonker/PasswordManager">
               <img
                 class="d-block w-40 project-img"
-                src="../../assets/images/password_manager.png"
-                alt="password manager"
+                src="../../assets/images/pong.png"
+                alt="pong"
               />
             </a>
           </ng-template>
@@ -30,8 +30,8 @@
             <a href="https://github.com/tmjonker/PasswordManager">
               <img
                 class="d-block w-40 project-img"
-                src="../../assets/images/password_manager.png"
-                alt="password manager"
+                src="../../assets/images/food2u.png"
+                alt="Food2U"
               />
             </a>
           </ng-template>
@@ -40,8 +40,8 @@
             <a href="https://github.com/tmjonker/PasswordManager">
               <img
                 class="d-block w-40 project-img"
-                src="../../assets/images/password_manager.png"
-                alt="password manager"
+                src="../../assets/images/bb1.png"
+                alt="burger bonanza"
               />
             </a>
           </ng-template>
