Finished the contact form.

--- a/src/app/greeting/greeting.component.html
+++ b/src/app/greeting/greeting.component.html
@@ -12,13 +12,34 @@
               />
               <hr />
               <p class="about-me">
-                I've been working exhaustively toward getting myself ready to
-                enter the workforce as a software developer by taking classes on
-                web design, java development, spring boot, android development,
-                and SQL/database management. I have been working on several
-                personal projects that showcase my skills in these areas and you
-                can view the source code for these projects by visiting my
-                github.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                tristique, eros ac malesuada pretium, ligula nibh viverra elit,
+                vehicula pulvinar dolor mauris ac enim. Pellentesque convallis
+                convallis libero a vehicula. Nulla at malesuada felis. Proin
+                placerat diam ut dui consequat auctor. Phasellus pellentesque id
+                mi id blandit. Pellentesque vel sapien quis arcu tempus
+                lobortis. Maecenas ut lacus sem. Vivamus blandit magna in
+                volutpat pharetra. Proin tristique aliquet laoreet. Ut eleifend
+                semper molestie. Nam placerat lectus sed sapien scelerisque, vel
+                imperdiet dui faucibus. Aliquam in mi nec elit semper consequat.
+                Cras in tristique magna. Vestibulum ante ipsum primis in
+                faucibus orci luctus et ultrices posuere cubilia curae;
+              </p>
+              <p class="about-me">
+                Nunc sodales tristique augue ut finibus. Suspendisse nec
+                tristique nisi. Maecenas consectetur vestibulum mauris ac
+                auctor. Pellentesque habitant morbi tristique senectus et netus
+                et malesuada fames ac turpis egestas. Proin sagittis consequat
+                leo, et bibendum quam condimentum eget. Curabitur non justo eu
+                mi gravida iaculis quis sit amet nibh. Vestibulum porttitor
+                vestibulum nulla sit amet hendrerit. Donec ac lorem vel lorem
+                feugiat ullamcorper. Sed arcu augue, lobortis nec gravida et,
+                elementum vitae ante. Lorem ipsum dolor sit amet, consectetur
+                adipiscing elit. Etiam sagittis arcu velit, quis finibus neque
+                aliquet eget. Cras id feugiat massa, vel fermentum diam. Ut
+                risus quam, scelerisque sit amet lectus eget, imperdiet cursus
+                lectus. Proin vitae justo nibh. Ut in leo ut nibh ullamcorper
+                egestas.
               </p>
             </div>
           </div>
