--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -10,7 +10,7 @@
             <a href="https://github.com/tmjonker/PasswordManager">
               <img
                 class="d-block w-40 project-img"
-                src="../../assets/images/password_manager.png"
+                src="ng-project/assets/images/password_manager.png"
                 alt="password manager"
               />
             </a>
@@ -20,7 +20,7 @@
             <a href="https://github.com/tmjonker/PasswordManager">
               <img
                 class="d-block w-40 project-img"
-                src="../../assets/images/pong.png"
+                src="ng-project/assets/images/pong.png"
                 alt="pong"
               />
             </a>
@@ -30,7 +30,7 @@
             <a href="https://github.com/tmjonker/PasswordManager">
               <img
                 class="d-block w-40 project-img"
-                src="../../assets/images/food2u.png"
+                src="ng-project/assets/images/food2u.png"
                 alt="Food2U"
               />
             </a>
@@ -40,7 +40,7 @@
             <a href="https://github.com/tmjonker/PasswordManager">
               <img
                 class="d-block w-40 project-img"
-                src="../../assets/images/bb1.png"
+                src="ng-project/assets/images/bb1.png"
                 alt="burger bonanza"
               />
             </a>
