--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,49 +1,54 @@
 <section id="work-experience">
-    <div class="container">
-      <div class="row">
-        <h1 class="section-header">Work Experience</h1>
-          <hr>
-        <div class="col-sm-12 section-container">
-          <div class="resume-listing">
-            <img class="fm" src="https://mma.prnewswire.com/media/1608392/Fannie_Mae_Logo.jpg?p=twitter" alt="fannie mae">
-            <h3 class="resume-position">Full Stack Engineer</h3>
-            <h3 class="resume-company">Fannie Mae</h3>
-            <h5 class="resume-date">September 2022 - Current</h5>
-            <ul>
-              <li>
-                Tasked with planning and coordinating the delivery of merchandise by creating effective delivery
-                routes
-                with the intention to maximize productivity.
-              </li>
-              <li>
-                Communicated business results to internal and external shareholders through the use of reports
-                that
-                were
-                created using Microsoft Excel.
-              </li>
-            </ul>
-          </div>
-          <div class="resume-listing">
-            <img class="gs" src="https://genspark.net/wp-content/uploads/2021/06/logo_GenSpark-e1624721945722.png" alt="fannie mae">
-            <h3 class="resume-position">Full Stack Engineer</h3>
-            <h3 class="resume-company">GenSpark</h3>
-            <h5 class="resume-date">April 2022 - Current</h5>
-            <ul>
-              <li>
-                Tasked with planning and coordinating the delivery of merchandise by creating effective delivery
-                routes
-                with the intention to maximize productivity.
-              </li>
-              <li>
-                Communicated business results to internal and external shareholders through the use of reports
-                that
-                were
-                created using Microsoft Excel.
-              </li>
-            </ul>
-          </div>
-
+  <div class="container">
+    <div class="row">
+      <h1 class="section-header">Work Experience</h1>
+      <hr />
+      <div class="col-sm-12 section-container">
+        <div class="resume-listing">
+          <img
+            class="fm"
+            src="https://mma.prnewswire.com/media/1608392/Fannie_Mae_Logo.jpg?p=twitter"
+            alt="fannie mae"
+          />
+          <h3 class="resume-position">Full Stack Engineer</h3>
+          <h3 class="resume-company">Fannie Mae</h3>
+          <h5 class="resume-date">September 2022 - Current</h5>
+          <ul>
+            <li>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget
+              efficitur sapien, non ultricies erat. Suspendisse in magna
+              lacinia, condimentum diam imperdiet, tempus dolor. Phasellus.
+            </li>
+            <li>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget
+              efficitur sapien, non ultricies erat. Suspendisse in magna
+              lacinia, condimentum diam imperdiet, tempus dolor. Phasellus.
+            </li>
+          </ul>
+        </div>
+        <div class="resume-listing">
+          <img
+            class="gs"
+            src="https://genspark.net/wp-content/uploads/2021/06/logo_GenSpark-e1624721945722.png"
+            alt="fannie mae"
+          />
+          <h3 class="resume-position">Full Stack Engineer</h3>
+          <h3 class="resume-company">GenSpark</h3>
+          <h5 class="resume-date">April 2022 - Current</h5>
+          <ul>
+            <li>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget
+              efficitur sapien, non ultricies erat. Suspendisse in magna
+              lacinia, condimentum diam imperdiet, tempus dolor. Phasellus.
+            </li>
+            <li>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget
+              efficitur sapien, non ultricies erat. Suspendisse in magna
+              lacinia, condimentum diam imperdiet, tempus dolor. Phasellus.
+            </li>
+          </ul>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
