--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -5,14 +5,14 @@
         <h1 class="section-header">Skills</h1>
         <hr />
         <div class="col-lg-12 skill-row">
-          <img class="html" src="../../assets/images/big-3.png" alt="big 3" />
+          <img class="html" src="ng-project/assets/images/big-3.png" alt="big 3" />
         </div>
         <div class="col-lg-12 skill-row">
-          <img class="java" src="../../assets/images/java.png" alt="java" />
-          <img class="spring" src="../../assets/images/spring-boot.png" alt="java" />
+          <img class="java" src="ng-project/assets/images/java.png" alt="java" />
+          <img class="spring" src="ng-project/assets/images/spring-boot.png" alt="java" />
         </div>
         <div class="col-lg-12 skill-row">
-          <img class="react" src="../../assets/images/react.png" alt="big 3" />
+          <img class="react" src="ng-project/assets/images/react.png" alt="big 3" />
         </div>
       </div>
     </div>
