--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,8 +1,7 @@
-<section id="work-experience">
+<section id="resume">
   <div class="container">
+    <app-section-header [headerTitle]="sectionHeader"></app-section-header>
     <div class="row">
-      <h1 class="section-header">Work Experience</h1>
-      <hr />
       <div class="col-sm-12 section-container">
         <div class="resume-listing">
           <img
