--- a/src/app/skills/skills.component.css
+++ b/src/app/skills/skills.component.css
@@ -1,3 +1,7 @@
+* {
+  color: #fff;
+}
+
 .skills-container {
   text-align: center;
 }
@@ -22,18 +26,6 @@
   width: 28%;
 }
 
-.section-header {
-  color: #fff;
-  text-align: center;
-  margin: 20px 0;
-}
-
 .section-container {
   margin-bottom: 75px;
-}
-hr {
-  width: 20%;
-  margin: auto;
-  background-color: #fff;
-  margin-bottom: 40px;
 }
