--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,9 +1,8 @@
 <section id="skills">
   <div class="container section-container">
+    <app-section-header [headerTitle]="sectionHeader"></app-section-header>
     <div class="row">
       <div class="col-lg-12 skills-container">
-        <h1 class="section-header">Skills</h1>
-        <hr />
         <div class="col-lg-12 skill-row">
           <img class="html" src="ng-project/assets/images/big-3.png" alt="big 3" />
         </div>
