--- a/src/app/greeting/greeting.component.html
+++ b/src/app/greeting/greeting.component.html
@@ -12,34 +12,28 @@
               />
               <hr />
               <p class="about-me">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-                tristique, eros ac malesuada pretium, ligula nibh viverra elit,
-                vehicula pulvinar dolor mauris ac enim. Pellentesque convallis
-                convallis libero a vehicula. Nulla at malesuada felis. Proin
-                placerat diam ut dui consequat auctor. Phasellus pellentesque id
-                mi id blandit. Pellentesque vel sapien quis arcu tempus
-                lobortis. Maecenas ut lacus sem. Vivamus blandit magna in
-                volutpat pharetra. Proin tristique aliquet laoreet. Ut eleifend
-                semper molestie. Nam placerat lectus sed sapien scelerisque, vel
-                imperdiet dui faucibus. Aliquam in mi nec elit semper consequat.
-                Cras in tristique magna. Vestibulum ante ipsum primis in
-                faucibus orci luctus et ultrices posuere cubilia curae;
+                Welcome to my portfolio website! My name is Timothy Jonker and I am
+                a talented software developer with a passion for creating
+                innovative and efficient solutions. With 1 year of experience, I
+                have honed my skills in a variety of web development
+                technologies, including HTML, CSS, Javascript, Java, React,
+                Angular, Spring boot, AWS, and Docker.
               </p>
               <p class="about-me">
-                Nunc sodales tristique augue ut finibus. Suspendisse nec
-                tristique nisi. Maecenas consectetur vestibulum mauris ac
-                auctor. Pellentesque habitant morbi tristique senectus et netus
-                et malesuada fames ac turpis egestas. Proin sagittis consequat
-                leo, et bibendum quam condimentum eget. Curabitur non justo eu
-                mi gravida iaculis quis sit amet nibh. Vestibulum porttitor
-                vestibulum nulla sit amet hendrerit. Donec ac lorem vel lorem
-                feugiat ullamcorper. Sed arcu augue, lobortis nec gravida et,
-                elementum vitae ante. Lorem ipsum dolor sit amet, consectetur
-                adipiscing elit. Etiam sagittis arcu velit, quis finibus neque
-                aliquet eget. Cras id feugiat massa, vel fermentum diam. Ut
-                risus quam, scelerisque sit amet lectus eget, imperdiet cursus
-                lectus. Proin vitae justo nibh. Ut in leo ut nibh ullamcorper
-                egestas.
+                As a developer, I thrive on challenging projects and pride
+                myself on delivering high-quality results. I am constantly
+                seeking new and exciting opportunities to expand my skill set
+                and grow as a developer. I am passionate about creating
+                user-friendly web applications and love to collaborate with
+                others to find creative solutions to complex problems.
+              </p>
+              <p class="about-me">
+                Whether you are an individual or a company, I am confident that
+                my technical expertise and experience will add value to your
+                projects. I am currently seeking new opportunities to take on
+                exciting challenges and grow as a developer. Thank you for
+                taking the time to visit my website, and I look forward to
+                hearing from you!
               </p>
             </div>
           </div>
