--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -9,18 +9,8 @@
             <a href="https://github.com/tmjonker/PasswordManager">
               <img
                 class="d-block w-40 project-img"
-                src="ng-project/assets/images/password_manager.png"
+                src="../assets/images/password_manager.png"
                 alt="password manager"
-              />
-            </a>
-          </ng-template>
-          <ng-template ngbSlide>
-            <h4>Pong</h4>
-            <a href="https://github.com/tmjonker/PasswordManager">
-              <img
-                class="d-block w-40 project-img"
-                src="ng-project/assets/images/pong.png"
-                alt="pong"
               />
             </a>
           </ng-template>
@@ -29,7 +19,7 @@
             <a href="https://github.com/tmjonker/PasswordManager">
               <img
                 class="d-block w-40 project-img"
-                src="ng-project/assets/images/food2u.png"
+                src="../assets/images/food2u.png"
                 alt="Food2U"
               />
             </a>
@@ -39,8 +29,18 @@
             <a href="https://github.com/tmjonker/PasswordManager">
               <img
                 class="d-block w-40 project-img"
-                src="ng-project/assets/images/bb1.png"
+                src="../assets/images/bb1.png"
                 alt="burger bonanza"
+              />
+            </a>
+          </ng-template>
+          <ng-template ngbSlide>
+            <h4>Pong</h4>
+            <a href="https://github.com/tmjonker/PasswordManager">
+              <img
+                class="d-block w-40 project-img"
+                src="../assets/images/pong.png"
+                alt="pong"
               />
             </a>
           </ng-template>
