--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -14,14 +14,18 @@
           <h5 class="resume-date">September 2022 - Current</h5>
           <ul>
             <li>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget
-              efficitur sapien, non ultricies erat. Suspendisse in magna
-              lacinia, condimentum diam imperdiet, tempus dolor. Phasellus.
+              Utilized Java, Angular, Spring Boot, Spring, and AWS to design,
+              develop and maintain full-stack applications for Fannie Mae.
             </li>
             <li>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget
-              efficitur sapien, non ultricies erat. Suspendisse in magna
-              lacinia, condimentum diam imperdiet, tempus dolor. Phasellus.
+              Successfully delivered numerous bug fixes for legacy applications,
+              resulting in a high success rate and improving the overall
+              stability of the applications.
+            </li>
+            <li>
+              Collaborated with cross-functional teams to troubleshoot and
+              resolve issues, ensuring timely delivery of high-quality solutions
+              that met business needs.
             </li>
           </ul>
         </div>
@@ -36,14 +40,19 @@
           <h5 class="resume-date">April 2022 - Current</h5>
           <ul>
             <li>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget
-              efficitur sapien, non ultricies erat. Suspendisse in magna
-              lacinia, condimentum diam imperdiet, tempus dolor. Phasellus.
+              Utilized Java, JavaFX, Spring, Spring Boot, and React to design
+              and develop full-stack applications for GenSpark.
             </li>
             <li>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget
-              efficitur sapien, non ultricies erat. Suspendisse in magna
-              lacinia, condimentum diam imperdiet, tempus dolor. Phasellus.
+              Collaborated with cross-functional teams to create complex
+              applications, delivering high-quality solutions that met business
+              needs on time and on budget.
+            </li>
+            <li>
+              Proactively invested time in self-learning to improve technical
+              abilities, staying up-to-date with industry trends and
+              implementing best practices to enhance code quality, performance,
+              and user experience.
             </li>
           </ul>
         </div>
