--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -2,16 +2,17 @@
   <div class="container section-container">
     <app-section-header [headerTitle]="sectionHeader"></app-section-header>
     <div class="row">
-      <div class="col-lg-12 skills-container">
-        <div class="col-lg-12 skill-row">
-          <img class="html" src="ng-project/assets/images/big-3.png" alt="big 3" />
-        </div>
-        <div class="col-lg-12 skill-row">
-          <img class="java" src="ng-project/assets/images/java.png" alt="java" />
-          <img class="spring" src="ng-project/assets/images/spring-boot.png" alt="java" />
-        </div>
-        <div class="col-lg-12 skill-row">
-          <img class="react" src="ng-project/assets/images/react.png" alt="big 3" />
+      <div class="col-lg-12">
+        <div class="skills-container">
+          <canvas
+            baseChart
+            [labels]="doughnutChartLabels"
+            [datasets]="doughnutChartDatasets"
+            [options]="doughnutChartOptions"
+            [legend]="true"
+            [type]="'doughnut'"
+          >
+          </canvas>
         </div>
       </div>
     </div>
