--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -33,13 +33,13 @@
         </ul>
         <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href=""
+            <a class="nav-link" href="http://www.linkedin.com/in/tmjonker8"
               ><i class="fab fa-linkedin fa-lg nav-spacing"></i>
               <span class="sr-only">linkedin</span></a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href=""
+            <a class="nav-link" href="http://github.com/tmjonker"
               ><i class="fab fa-github fa-lg nav-spacing"></i>
               <span class="sr-only">github</span></a
             >
