Fixed some sizing and formatting issues

--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -13,3 +13,11 @@ h4 {
 .section-container {
     margin-bottom: 75px;
   }
+
+  @media screen
+and (max-width : 850px) {
+
+  .project-img {
+    width: 70%;
+  }
+}
