--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -9,25 +9,29 @@
             src="https://mma.prnewswire.com/media/1608392/Fannie_Mae_Logo.jpg?p=twitter"
             alt="fannie mae"
           />
-          <h3 class="resume-position">Full Stack Engineer</h3>
-          <h3 class="resume-company">Fannie Mae</h3>
-          <h5 class="resume-date">September 2022 - Current</h5>
-          <ul>
-            <li>
-              Utilized Java, Angular, Spring Boot, Spring, and AWS to design,
-              develop and maintain full-stack applications for Fannie Mae.
-            </li>
-            <li>
-              Successfully delivered numerous bug fixes for legacy applications,
-              resulting in a high success rate and improving the overall
-              stability of the applications.
-            </li>
-            <li>
-              Collaborated with cross-functional teams to troubleshoot and
-              resolve issues, ensuring timely delivery of high-quality solutions
-              that met business needs.
-            </li>
-          </ul>
+          <div class="resume-block">
+            <h3 class="resume-position">Full Stack Engineer</h3>
+            <h3 class="resume-company">Fannie Mae</h3>
+            <h5 class="resume-date">September 2022 - Current</h5>
+          </div>
+          <div class="bp-block">
+            <ul>
+              <li>
+                Utilized Java, Angular, Spring Boot, Spring, and AWS to design,
+                develop and maintain full-stack applications for Fannie Mae.
+              </li>
+              <li>
+                Successfully delivered numerous bug fixes for legacy
+                applications, resulting in a high success rate and improving the
+                overall stability of the applications.
+              </li>
+              <li>
+                Collaborated with cross-functional teams to troubleshoot and
+                resolve issues, ensuring timely delivery of high-quality
+                solutions that met business needs.
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="resume-listing">
           <img
@@ -35,26 +39,31 @@
             src="https://genspark.net/wp-content/uploads/2021/06/logo_GenSpark-e1624721945722.png"
             alt="fannie mae"
           />
-          <h3 class="resume-position">Full Stack Engineer</h3>
-          <h3 class="resume-company">GenSpark</h3>
-          <h5 class="resume-date">April 2022 - Current</h5>
-          <ul>
-            <li>
-              Utilized Java, JavaFX, Spring, Spring Boot, and React to design
-              and develop full-stack applications for GenSpark.
-            </li>
-            <li>
-              Collaborated with cross-functional teams to create complex
-              applications, delivering high-quality solutions that met business
-              needs on time and on budget.
-            </li>
-            <li>
-              Proactively invested time in self-learning to improve technical
-              abilities, staying up-to-date with industry trends and
-              implementing best practices to enhance code quality, performance,
-              and user experience.
-            </li>
-          </ul>
+
+          <div class="resume-block-gs">
+            <h3 class="resume-position">Full Stack Engineer</h3>
+            <h3 class="resume-company">GenSpark</h3>
+            <h5 class="resume-date">April 2022 - Current</h5>
+          </div>
+          <div class="bp-block-gs">
+            <ul>
+              <li>
+                Utilized Java, JavaFX, Spring, Spring Boot, and React to design
+                and develop full-stack applications for GenSpark.
+              </li>
+              <li>
+                Collaborated with cross-functional teams to create complex
+                applications, delivering high-quality solutions that met
+                business needs on time and on budget.
+              </li>
+              <li>
+                Proactively invested time in self-learning to improve technical
+                abilities, staying up-to-date with industry trends and
+                implementing best practices to enhance code quality,
+                performance, and user experience.
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
