--- a/src/app/jumbotron/jumbotron.component.css
+++ b/src/app/jumbotron/jumbotron.component.css
@@ -15,3 +15,14 @@
     padding: 15px;
     margin-top: 130px;
   }
+
+  @media screen and (max-width: 850px) {
+    .jumbo-header {
+      width: 75%;
+      margin-top: 110px;
+    }
+
+    .jumbotron {
+      height: 265px;
+    }
+  }
