Fixed issue where projects did not link to corresponding repo.

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -20,7 +20,7 @@
           </ng-template>
           <ng-template ngbSlide>
             <h4>Food2U - a food delivery concept</h4>
-            <a href="https://github.com/tmjonker/PasswordManager">
+            <a href="https://github.com/tmjonker/food2u">
               <img
                 class="d-block w-40 project-img"
                 src="../assets/images/food2u.png"
@@ -30,7 +30,7 @@
           </ng-template>
           <ng-template ngbSlide>
             <h4>Burger Bonanza - a fictional restaurant concept</h4>
-            <a href="https://github.com/tmjonker/PasswordManager">
+            <a href="https://github.com/tmjonker/burger_bonanza_combined">
               <img
                 class="d-block w-40 project-img"
                 src="../assets/images/bb1.png"
@@ -40,7 +40,7 @@
           </ng-template>
           <ng-template ngbSlide>
             <h4>Pong</h4>
-            <a href="https://github.com/tmjonker/PasswordManager">
+            <a href="https://github.com/tmjonker/pong">
               <img
                 class="d-block w-40 project-img"
                 src="../assets/images/pong.png"
