--- a/src/app/jumbotron/jumbotron.component.css
+++ b/src/app/jumbotron/jumbotron.component.css
@@ -1,8 +1,8 @@
 .jumbotron {
-    background-image: url("https://cdn.pixabay.com/photo/2016/03/27/18/54/technology-1283624_960_720.jpg");
+    background-image: linear-gradient(transparent, #444444 95%), url("https://cdn.pixabay.com/photo/2016/03/27/18/54/technology-1283624_960_720.jpg");
     opacity: 0.8;
     background-size: 100%;
-    height: 300px;
+    height: 400px;
   }
 
   .jumbo-header {
@@ -13,13 +13,13 @@
     opacity: 0.9;
     border-radius: 8px;
     padding: 15px;
-    margin-top: 130px;
+    margin-top: 160px;
   }
 
   @media screen and (max-width: 850px) {
     .jumbo-header {
       width: 75%;
-      margin-top: 70px;
+      margin-top: 60px;
     }
 
     .jumbotron {
