--- a/src/app/greeting/greeting.component.css
+++ b/src/app/greeting/greeting.component.css
@@ -4,7 +4,6 @@
 
 .section-container {
   margin-bottom: 55px;
-  
 }
 
 .about-me {
@@ -14,10 +13,12 @@
   letter-spacing: 2px;
   text-align: center;
   color: #fff;
-  border-radius: 4px;
+  border-radius: 7px;
   padding: 20px;
-  border: 5px solid rgba(255,255,255,.55);
+  border: 5px solid rgba(255,255,255,.75);
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   width: 50%;
+  text-shadow: 1px 1px 2px rgba(255,255,255,.55)
 }
 
 .hello {
