--- a/src/app/greeting/greeting.component.html
+++ b/src/app/greeting/greeting.component.html
@@ -12,26 +12,18 @@
               />
               <hr />
               <p class="about-me bg-dark">
-                Welcome to my portfolio website! My name is Timothy Jonker and I am
-                a talented software developer with a passion for creating
+                I am a talented software developer with a passion for creating
                 innovative and efficient solutions. With 1 year of experience, I
                 have honed my skills in a variety of web development
                 technologies, including HTML, CSS, Javascript, Java, React,
                 Angular, Spring boot, AWS, and Docker.<br />
-              <br />
+                <br />
                 As a developer, I thrive on challenging projects and pride
                 myself on delivering high-quality results. I am constantly
                 seeking new and exciting opportunities to expand my skill set
                 and grow as a developer. I am passionate about creating
                 user-friendly web applications and love to collaborate with
                 others to find creative solutions to complex problems.<br />
-              <br />
-                Whether you are an individual or a company, I am confident that
-                my technical expertise and experience will add value to your
-                projects. I am currently seeking new opportunities to take on
-                exciting challenges and grow as a developer. Thank you for
-                taking the time to visit my website, and I look forward to
-                hearing from you!
               </p>
             </div>
           </div>
