--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -1,9 +1,10 @@
 .section-container {
   margin: 0 auto 75px;
   background-color: #fff;
-  border-radius: 4px;
+  border-radius: 7px;
   padding: 0 20px;
-  width: 68%
+  width: 68%;
+  box-shadow: 5px 8px rgba(0, 0, 0, 0.4);
 }
 
 .resume-listing {
