Added shadow to name in jumbotron.

--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -38,9 +38,8 @@
           <img
             class="gs"
             src="https://genspark.net/wp-content/uploads/2021/06/logo_GenSpark-e1624721945722.png"
-            alt="fannie mae"
-          />
-
+            alt="genspark"
+          /> 
           <div class="resume-block-gs">
             <h3 class="resume-position">Full Stack Engineer</h3>
             <h3 class="resume-company">GenSpark</h3>
