--- a/src/app/jumbotron/jumbotron.component.css
+++ b/src/app/jumbotron/jumbotron.component.css
@@ -14,6 +14,7 @@
     border-radius: 8px;
     padding: 15px;
     margin-top: 160px;
+    box-shadow: 5px 8px rgba(0, 0, 0, 0.4);
   }
 
   @media screen and (max-width: 850px) {
