Modified fannie mae to logo to trim the excess around it>

--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -7,7 +7,7 @@
         <div class="resume-listing">
           <img
             class="fm"
-            src="https://mma.prnewswire.com/media/1608392/Fannie_Mae_Logo.jpg?p=twitter"
+            src="../../assets/images/Fannie_Mae_Logo.jpg"
             alt="fannie mae"
           />
           <div class="resume-block">
