--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -19,7 +19,7 @@
             </a>
           </ng-template>
           <ng-template ngbSlide>
-            <h4>Food2U - a food delivery concept</h4>
+            <h4>Food2U</h4>
             <a href="https://github.com/tmjonker/food2u">
               <img
                 class="d-block w-40 project-img"
@@ -29,7 +29,7 @@
             </a>
           </ng-template>
           <ng-template ngbSlide>
-            <h4>Burger Bonanza - a fictional restaurant concept</h4>
+            <h4>Burger Bonanza</h4>
             <a href="https://github.com/tmjonker/burger_bonanza_combined">
               <img
                 class="d-block w-40 project-img"
