Added new project to portfolio.

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -29,8 +29,8 @@
             </a>
           </ng-template>
           <ng-template ngbSlide>
-            <h4>Burger Bonanza</h4>
-            <a href="https://github.com/tmjonker/burger_bonanza_combined">
+            <h4>Burger Bonanza - Front-end</h4>
+            <a href="https://github.com/tmjonker/burger_bonanza-frontend">
               <img
                 class="d-block w-40 project-img"
                 src="../assets/images/bb1.png"
@@ -39,12 +39,32 @@
             </a>
           </ng-template>
           <ng-template ngbSlide>
-            <h4>Pong</h4>
-            <a href="https://github.com/tmjonker/pong">
+            <h4>Burger Bonanza - Back-end</h4>
+            <a href="https://github.com/tmjonker/burger_bonanza_backend">
               <img
                 class="d-block w-40 project-img"
-                src="../assets/images/pong.png"
-                alt="pong"
+                src="../assets/images/bb1.png"
+                alt="burger bonanza"
+              />
+            </a>
+          </ng-template>
+          <ng-template ngbSlide>
+            <h4>Social+ - Front-end</h4>
+            <a href="https://github.com/tmjonker/social_plus_frontend">
+              <img
+                class="d-block w-40 project-img"
+                src="../assets/images/social_1.png"
+                alt="social media app"
+              />
+            </a>
+          </ng-template>
+          <ng-template ngbSlide>
+            <h4>Social+ - Back-end</h4>
+            <a href="https://github.com/tmjonker/social_plus_backend">
+              <img
+                class="d-block w-40 project-img"
+                src="../assets/images/social_1.png"
+                alt="social media app"
               />
             </a>
           </ng-template>
